# mlops-blueprint

./: Dockerfile  LICENSE  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
app/: app.py
app/static/: style.css
app/templates/: index.html
models/: regressor.py
