[tool.poetry]
name = "serve-and-monitor-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.7.1"
flask = "^3.1.1"
pandas = "^2.3.0"
requests = "^2.32.4"
numpy = "^2.3.0"
prometheus-client = "^0.22.1"
prometheus-flask-exporter = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
